dist/1.0/bin/sample/retrieveUnpackaged/objects/Cost_Element__c.object
<CustomObject>
    <description>Solution base</description>
    <fields>
        <fullName>Capex_one_time__c</fullName>
        <label>Capex one time</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capex_reusable__c</fullName>
        <label>Capex reusable</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>LL Inst/Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URTiP One-FF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URTiP Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roofs Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router Maintanance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Customer   Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPE Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utrzymanie Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDH/DWDM Equipmet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>xDSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Konwerter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modem E3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiplekser   n*E1/Eth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modem FO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDH/Konwerter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Koszt operacyjny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU Micro PP Frequency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU Micro 3.5G Frequency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU T-Com Datalink (TDM)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Network__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Client/Network [%]</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Solution Base</description>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deinstalation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deinstalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Time__c</fullName>
        <label>Delivery Time [weeks]</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Forced_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forced Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <label>Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opex_monthly__c</fullName>
        <label>Opex monthly</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opex_one_off__c</fullName>
        <label>Opex one off</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Removed_from_use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Removed from use</label>
        <type>Checkbox</type>
    </fields>
    <label>Cost Element</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Inventory__c</columns>
        <columns>Capex_reusable__c</columns>
        <columns>Client_Network__c</columns>
        <columns>Category__c</columns>
        <columns>Delivery_Time__c</columns>
        <columns>Forced_Display__c</columns>
        <columns>Currency__c</columns>
        <columns>Removed_from_use__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>update</fullName>
        <columns>Name__c</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>update</label>
    </listViews>
    <nameField>
        <displayFormat>CE{00000000}</displayFormat>
        <label>Cost Element Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Category_not_null</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Category__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Category__c</errorDisplayField>
        <errorMessage>You have to choose a category value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Client_Network_between_0_100</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Client_Network__c &gt;1 || Client_Network__c &lt; 0 , true, false)</errorConditionFormula>
        <errorDisplayField>Client_Network__c</errorDisplayField>
        <errorMessage>Enter a value from 0 to 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Currency_not_null</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Currency__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Currency__c</errorDisplayField>
        <errorMessage>You have to choose a currency value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_not_null</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Name__c )</errorConditionFormula>
        <errorDisplayField>Name__c</errorDisplayField>
        <errorMessage>You must enter a Name value</errorMessage>
    </validationRules>
</CustomObject>